@@ -43,7 +43,7 @@ enum {
 #define LAST_DOMAIN_STATE_MEMBER extra_params
 
 #if defined(HAS_FULL_THREAD_VARIABLES) || defined(IN_CAML_RUNTIME)
-  CAMLextern __thread caml_domain_state* caml_state;
+  CAMLextern thread_local caml_domain_state* caml_state;
   #define Caml_state_opt caml_state
 #else
 #ifdef __GNUC__
