@@ -165,6 +165,9 @@ Working version
   (KC Sivaramakrishnan, report by Gabriel Scherer, review by Gabriel Scherer,
   Sadiq Jaffer and Fabrice Buoro)
 
+- #?????: Use standard C `thread_local` storage class specifier.
+  (Antonin Décimo and Samuel Hym, review by ?????)
+
 ### Code generation and optimizations:
 
 - #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
